[project]
name = "comfyui_pixel_snapping"
description = "SIFT-based image alignment, intelligent mask cropping and restoration for ComfyUI"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["opencv-python>=4.0.0", "numpy>=1.19.0"]

[project.urls]
Repository = "https://github.com/flywhale-666/ComfyUI_pixel_snapping"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/flywhale-666/ComfyUI_pixel_snapping/blob/main/README.md"
"Bug Tracker" = "https://github.com/flywhale-666/ComfyUI_pixel_snapping/issues"

[tool.comfy]
PublisherId = "flywhale"
DisplayName = "ComfyUI_Pixel_Snapping"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility
